Primer Semestre/Procesadores de Lenguaje/Practica 3/PracticaFinal12/gramFibParser.java
// Generated from gramFibParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gramFibParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		B_WHILE=1, B_FOR=2, FROM=3, CASE=4, STEP=5, TO=6, DO=7, FUNCION=8, SWITCH=9, 
		INCLUD=10, DEVOLVER=11, BEGIN=12, END=13, ENDSWITCH=14, BREACK=15, TYPE=16, 
		INT=17, IDENTIFICADOR=18, CADENA=19, OPERACION=20, FLOTANTE=21, VARIABLE=22, 
		CI=23, CD=24, PI=25, PD=26, ASIG=27, PUNTOS=28, COMA=29, END_LINEDECL=30, 
		AND=31, OR=32, TRUE=33, FALSE=34, NOT=35, COMENTARIO_BLOQUE=36, COMENTARIO_BLOQUE2=37, 
		COMENTARIO_LINEA=38, COMENTARIO_LINEA2=39, COMENTARIO_LINEA3=40, IF=41, 
		ELSE=42, THEN=43, ENDIF=44, BAJO=45, WS=46, NEWLINE=47;
	public static final int
		RULE_prog = 0, RULE_includ = 1, RULE_functions = 2, RULE_cabecera = 3, 
		RULE_cuerpoFunc = 4, RULE_cuerpo = 5, RULE_interior = 6, RULE_b_while = 7, 
		RULE_declaracion_variable = 8, RULE_declaracion = 9, RULE_asignacion = 10, 
		RULE_cabecera_switch = 11, RULE_cuerpo_switch = 12, RULE_return_fun = 13, 
		RULE_llamar_funcion = 14, RULE_condicional = 15, RULE_cuerpoIf = 16, RULE_operador_logico = 17, 
		RULE_expr_comparacion = 18, RULE_expr_condicional = 19, RULE_declaracion_array = 20, 
		RULE_op_array = 21, RULE_b_for = 22, RULE_expr = 23, RULE_nombre_funcion = 24, 
		RULE_identificador = 25, RULE_parametroLlamada = 26, RULE_parametroCreacion = 27, 
		RULE_p_reservadas = 28, RULE_p_reservadaWhile = 29, RULE_p_reservadaFor = 30, 
		RULE_p_reservadaFuncion = 31, RULE_begin = 32, RULE_end = 33, RULE_pr_switch = 34, 
		RULE_pr_endswitch = 35, RULE_pr_breack = 36, RULE_ifi = 37, RULE_elsei = 38, 
		RULE_then = 39, RULE_endifi = 40, RULE_p_reservadaAnd = 41, RULE_p_reservadaOr = 42, 
		RULE_booleano = 43, RULE_not = 44, RULE_p_reservadaFrom = 45, RULE_p_reservadaStep = 46, 
		RULE_p_reservadaTO = 47, RULE_p_reservadaDO = 48, RULE_cadenachar = 49, 
		RULE_integer = 50, RULE_type = 51, RULE_n_libreria = 52, RULE_variable = 53, 
		RULE_n_funcion = 54, RULE_operaciones = 55, RULE_opAsig = 56, RULE_coma = 57, 
		RULE_d_puntos = 58, RULE_end_line = 59, RULE_parentesis_izquierdo = 60, 
		RULE_parentesis_derecho = 61, RULE_corchete_izquierdo = 62, RULE_corchete_derecho = 63, 
		RULE_ws = 64, RULE_newline = 65, RULE_puntos = 66, RULE_coments = 67;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "includ", "functions", "cabecera", "cuerpoFunc", "cuerpo", "interior", 
			"b_while", "declaracion_variable", "declaracion", "asignacion", "cabecera_switch", 
			"cuerpo_switch", "return_fun", "llamar_funcion", "condicional", "cuerpoIf", 
			"operador_logico", "expr_comparacion", "expr_condicional", "declaracion_array", 
			"op_array", "b_for", "expr", "nombre_funcion", "identificador", "parametroLlamada", 
			"parametroCreacion", "p_reservadas", "p_reservadaWhile", "p_reservadaFor", 
			"p_reservadaFuncion", "begin", "end", "pr_switch", "pr_endswitch", "pr_breack", 
			"ifi", "elsei", "then", "endifi", "p_reservadaAnd", "p_reservadaOr", 
			"booleano", "not", "p_reservadaFrom", "p_reservadaStep", "p_reservadaTO", 
			"p_reservadaDO", "cadenachar", "integer", "type", "n_libreria", "variable", 
			"n_funcion", "operaciones", "opAsig", "coma", "d_puntos", "end_line", 
			"parentesis_izquierdo", "parentesis_derecho", "corchete_izquierdo", "corchete_derecho", 
			"ws", "newline", "puntos", "coments"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'while'", "'for'", "'from'", "'case'", "'step'", "'to'", "'do'", 
			"'function'", "'switch'", "'include'", "'devolver'", "'begin'", "'end'", 
			"'endswitch'", "'break'", null, null, null, null, null, null, null, "'['", 
			"']'", "'('", "')'", "':='", "':'", "','", "';'", "'&&'", "'||'", "'true'", 
			"'false'", "'!'", null, null, null, null, null, "'if'", "'else'", "'then'", 
			"'endif'", "'_'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "B_WHILE", "B_FOR", "FROM", "CASE", "STEP", "TO", "DO", "FUNCION", 
			"SWITCH", "INCLUD", "DEVOLVER", "BEGIN", "END", "ENDSWITCH", "BREACK", 
			"TYPE", "INT", "IDENTIFICADOR", "CADENA", "OPERACION", "FLOTANTE", "VARIABLE", 
			"CI", "CD", "PI", "PD", "ASIG", "PUNTOS", "COMA", "END_LINEDECL", "AND", 
			"OR", "TRUE", "FALSE", "NOT", "COMENTARIO_BLOQUE", "COMENTARIO_BLOQUE2", 
			"COMENTARIO_LINEA", "COMENTARIO_LINEA2", "COMENTARIO_LINEA3", "IF", "ELSE", 
			"THEN", "ENDIF", "BAJO", "WS", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramFibParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gramFibParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(gramFibParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(gramFibParser.NEWLINE, i);
		}
		public List<IncludContext> includ() {
			return getRuleContexts(IncludContext.class);
		}
		public IncludContext includ(int i) {
			return getRuleContext(IncludContext.class,i);
		}
		public List<FunctionsContext> functions() {
			return getRuleContexts(FunctionsContext.class);
		}
		public FunctionsContext functions(int i) {
			return getRuleContext(FunctionsContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCION) | (1L << INCLUD) | (1L << DEVOLVER) | (1L << VARIABLE) | (1L << NEWLINE))) != 0)) {
				{
				setState(141);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FUNCION:
				case INCLUD:
				case DEVOLVER:
				case VARIABLE:
					{
					setState(138);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case INCLUD:
					case DEVOLVER:
						{
						setState(136);
						includ();
						}
						break;
					case FUNCION:
					case VARIABLE:
						{
						setState(137);
						functions();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				case NEWLINE:
					{
					setState(140);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludContext extends ParserRuleContext {
		public P_reservadasContext p_reservadas() {
			return getRuleContext(P_reservadasContext.class,0);
		}
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public End_lineContext end_line() {
			return getRuleContext(End_lineContext.class,0);
		}
		public IncludContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includ; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).enterInclud(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).exitInclud(this);
		}
	}

	public final IncludContext includ() throws RecognitionException {
		IncludContext _localctx = new IncludContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_includ);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			p_reservadas();
			setState(147);
			identificador();
			setState(148);
			end_line();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionsContext extends ParserRuleContext {
		public CabeceraContext cabecera() {
			return getRuleContext(CabeceraContext.class,0);
		}
		public CuerpoFuncContext cuerpoFunc() {
			return getRuleContext(CuerpoFuncContext.class,0);
		}
		public FunctionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).enterFunctions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).exitFunctions(this);
		}
	}

	public final FunctionsContext functions() throws RecognitionException {
		FunctionsContext _localctx = new FunctionsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functions);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			cabecera();
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(151);
				cuerpoFunc();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CabeceraContext extends ParserRuleContext {
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public Parentesis_izquierdoContext parentesis_izquierdo() {
			return getRuleContext(Parentesis_izquierdoContext.class,0);
		}
		public Parentesis_derechoContext parentesis_derecho() {
			return getRuleContext(Parentesis_derechoContext.class,0);
		}
		public D_puntosContext d_puntos() {
			return getRuleContext(D_puntosContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public P_reservadaFuncionContext p_reservadaFuncion() {
			return getRuleContext(P_reservadaFuncionContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public List<ParametroCreacionContext> parametroCreacion() {
			return getRuleContexts(ParametroCreacionContext.class);
		}
		public ParametroCreacionContext parametroCreacion(int i) {
			return getRuleContext(ParametroCreacionContext.class,i);
		}
		public CabeceraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabecera; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).enterCabecera(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).exitCabecera(this);
		}
	}

	public final CabeceraContext cabecera() throws RecognitionException {
		CabeceraContext _localctx = new CabeceraContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cabecera);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCION:
				{
				setState(154);
				p_reservadaFuncion();
				}
				break;
			case VARIABLE:
				{
				setState(155);
				variable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(158);
			identificador();
			setState(159);
			parentesis_izquierdo();
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(160);
				parametroCreacion();
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(166);
			parentesis_derecho();
			setState(167);
			d_puntos();
			setState(168);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CuerpoFuncContext extends ParserRuleContext {
		public BeginContext begin() {
			return getRuleContext(BeginContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public List<InteriorContext> interior() {
			return getRuleContexts(InteriorContext.class);
		}
		public InteriorContext interior(int i) {
			return getRuleContext(InteriorContext.class,i);
		}
		public CuerpoFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpoFunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).enterCuerpoFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).exitCuerpoFunc(this);
		}
	}

	public final CuerpoFuncContext cuerpoFunc() throws RecognitionException {
		CuerpoFuncContext _localctx = new CuerpoFuncContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cuerpoFunc);
		int _la;
		try {
			setState(180);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BEGIN:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(170);
				begin();
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << B_WHILE) | (1L << B_FOR) | (1L << INCLUD) | (1L << DEVOLVER) | (1L << TYPE) | (1L << INT) | (1L << IDENTIFICADOR) | (1L << CADENA) | (1L << VARIABLE) | (1L << IF))) != 0)) {
					{
					{
					setState(171);
					interior();
					}
					}
					setState(176);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(177);
				end();
				}
				}
				break;
			case B_WHILE:
			case B_FOR:
			case INCLUD:
			case DEVOLVER:
			case TYPE:
			case INT:
			case IDENTIFICADOR:
			case CADENA:
			case VARIABLE:
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(179);
				interior();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CuerpoContext extends ParserRuleContext {
		public BeginContext begin() {
			return getRuleContext(BeginContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public List<InteriorContext> interior() {
			return getRuleContexts(InteriorContext.class);
		}
		public InteriorContext interior(int i) {
			return getRuleContext(InteriorContext.class,i);
		}
		public CuerpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).enterCuerpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).exitCuerpo(this);
		}
	}

	public final CuerpoContext cuerpo() throws RecognitionException {
		CuerpoContext _localctx = new CuerpoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cuerpo);
		int _la;
		try {
			setState(192);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BEGIN:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(182);
				begin();
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << B_WHILE) | (1L << B_FOR) | (1L << INCLUD) | (1L << DEVOLVER) | (1L << TYPE) | (1L << INT) | (1L << IDENTIFICADOR) | (1L << CADENA) | (1L << VARIABLE) | (1L << IF))) != 0)) {
					{
					{
					setState(183);
					interior();
					}
					}
					setState(188);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(189);
				end();
				}
				}
				break;
			case B_WHILE:
			case B_FOR:
			case INCLUD:
			case DEVOLVER:
			case TYPE:
			case INT:
			case IDENTIFICADOR:
			case CADENA:
			case VARIABLE:
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(191);
				interior();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InteriorContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public B_whileContext b_while() {
			return getRuleContext(B_whileContext.class,0);
		}
		public B_forContext b_for() {
			return getRuleContext(B_forContext.class,0);
		}
		public Return_funContext return_fun() {
			return getRuleContext(Return_funContext.class,0);
		}
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public CadenacharContext cadenachar() {
			return getRuleContext(CadenacharContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public InteriorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interior; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).enterInterior(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).exitInterior(this);
		}
	}

	public final InteriorContext interior() throws RecognitionException {
		InteriorContext _localctx = new InteriorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_interior);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(194);
				expr(0);
				}
				break;
			case 2:
				{
				setState(195);
				b_while();
				}
				break;
			case 3:
				{
				setState(196);
				b_for();
				}
				break;
			case 4:
				{
				setState(197);
				return_fun();
				}
				break;
			case 5:
				{
				setState(198);
				declaracion();
				}
				break;
			case 6:
				{
				setState(199);
				asignacion();
				}
				break;
			case 7:
				{
				setState(200);
				cadenachar();
				}
				break;
			case 8:
				{
				setState(201);
				condicional();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class B_whileContext extends ParserRuleContext {
		public P_reservadaWhileContext p_reservadaWhile() {
			return getRuleContext(P_reservadaWhileContext.class,0);
		}
		public Parentesis_izquierdoContext parentesis_izquierdo() {
			return getRuleContext(Parentesis_izquierdoContext.class,0);
		}
		public Expr_condicionalContext expr_condicional() {
			return getRuleContext(Expr_condicionalContext.class,0);
		}
		public Parentesis_derechoContext parentesis_derecho() {
			return getRuleContext(Parentesis_derechoContext.class,0);
		}
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public B_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_b_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).enterB_while(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).exitB_while(this);
		}
	}

	public final B_whileContext b_while() throws RecognitionException {
		B_whileContext _localctx = new B_whileContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_b_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			p_reservadaWhile();
			setState(205);
			parentesis_izquierdo();
			setState(206);
			expr_condicional();
			setState(207);
			parentesis_derecho();
			setState(208);
			cuerpo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracion_variableContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public Declaracion_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).enterDeclaracion_variable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).exitDeclaracion_variable(this);
		}
	}

	public final Declaracion_variableContext declaracion_variable() throws RecognitionException {
		Declaracion_variableContext _localctx = new Declaracion_variableContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declaracion_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(210);
			type();
			setState(211);
			identificador();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public Declaracion_variableContext declaracion_variable() {
			return getRuleContext(Declaracion_variableContext.class,0);
		}
		public OpAsigContext opAsig() {
			return getRuleContext(OpAsigContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<End_lineContext> end_line() {
			return getRuleContexts(End_lineContext.class);
		}
		public End_lineContext end_line(int i) {
			return getRuleContext(End_lineContext.class,i);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).exitDeclaracion(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declaracion);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(213);
			declaracion_variable();
			setState(214);
			opAsig();
			setState(218);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(215);
					expr(0);
					}
					} 
				}
				setState(220);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(224);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(221);
					end_line();
					}
					} 
				}
				setState(226);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public OpAsigContext opAsig() {
			return getRuleContext(OpAsigContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<End_lineContext> end_line() {
			return getRuleContexts(End_lineContext.class);
		}
		public End_lineContext end_line(int i) {
			return getRuleContext(End_lineContext.class,i);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramFibParserListener ) ((gramFibParserListener)listener).exitAsignacion(this);
		}
	}
